// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultTokens should match snapshot 1`] = `
Object {
  "backgroundAlertCritical": "#FAEAEA",
  "backgroundAlertInfo": "#E5F7FF",
  "backgroundAlertSuccess": "#EBF4EC",
  "backgroundAlertWarning": "#FDF0E3",
  "backgroundBadgeCritical": "#FAEAEA",
  "backgroundBadgeDark": "#252A31",
  "backgroundBadgeInfo": "#E5F7FF",
  "backgroundBadgeNeutral": "#f5f7f9",
  "backgroundBadgeSuccess": "#EBF4EC",
  "backgroundBadgeWarning": "#FDF0E3",
  "backgroundBadgeWhite": "#fff",
  "backgroundBody": "#f5f7f9",
  "backgroundButtonBordered": "transparent",
  "backgroundButtonBorderedActive": "#f5f7f9",
  "backgroundButtonBorderedHover": "#f5f7f9",
  "backgroundButtonCritical": "#D21C1C",
  "backgroundButtonCriticalActive": "#9D1515",
  "backgroundButtonCriticalHover": "#B91919",
  "backgroundButtonFacebook": "#3b5998",
  "backgroundButtonFacebookActive": "#354f88",
  "backgroundButtonFacebookHover": "#385490",
  "backgroundButtonGoogle": "#f5f7f9",
  "backgroundButtonGoogleActive": "#d6dee6",
  "backgroundButtonGoogleHover": "#e5eaef",
  "backgroundButtonInfo": "#0172CB",
  "backgroundButtonInfoActive": "#01508E",
  "backgroundButtonInfoHover": "#0161AC",
  "backgroundButtonLinkPrimary": "transparent",
  "backgroundButtonLinkPrimaryActive": "#d6dee6",
  "backgroundButtonLinkPrimaryHover": "#e5eaef",
  "backgroundButtonLinkSecondary": "transparent",
  "backgroundButtonLinkSecondaryActive": "#d6dee6",
  "backgroundButtonLinkSecondaryHover": "#e5eaef",
  "backgroundButtonPrimary": "#00a991",
  "backgroundButtonPrimaryActive": "#008f7b",
  "backgroundButtonPrimaryHover": "#009882",
  "backgroundButtonSecondary": "#e8edf1",
  "backgroundButtonSecondaryActive": "#cad5df",
  "backgroundButtonSecondaryHover": "#d9e1e8",
  "backgroundButtonSuccess": "#28A138",
  "backgroundButtonSuccessActive": "#1D7228",
  "backgroundButtonSuccessHover": "#238B31",
  "backgroundButtonWarning": "#F9971E",
  "backgroundButtonWarningActive": "#D67906",
  "backgroundButtonWarningHover": "#F38906",
  "backgroundButtonWhite": "#fff",
  "backgroundButtonWhiteActive": "#e5eaef",
  "backgroundButtonWhiteBordered": "transparent",
  "backgroundButtonWhiteBorderedActive": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteBorderedHover": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteHover": "#f5f7f9",
  "backgroundCard": "#fff",
  "backgroundCarrierLogo": "transparent",
  "backgroundCountryFlag": "transparent",
  "backgroundIllustration": "transparent",
  "backgroundInput": "#fff",
  "backgroundInputDisabled": "#e8edf1",
  "backgroundModal": "#fff",
  "backgroundSeparator": "#e8edf1",
  "backgroundServiceLogo": "transparent",
  "backgroundTable": "#fff",
  "backgroundTableEven": "#f5f7f9",
  "backgroundTableHover": "#e8edf1",
  "backgroundTableShadowLeft": "linear-gradient(to left, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTableShadowRight": "linear-gradient(to right, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTag": "#f5f7f9",
  "backgroundTagActive": "#d6dee6",
  "backgroundTagHover": "#e5eaef",
  "backgroundTagSelected": "#252A31",
  "backgroundTagSelectedActive": "#0B0C0F",
  "backgroundTagSelectedHover": "#181B20",
  "borderColorButtonCriticalBordered": "#D21C1C",
  "borderColorButtonCriticalBorderedActive": "#9D1515",
  "borderColorButtonCriticalBorderedHover": "#B91919",
  "borderColorButtonFacebookBordered": "#3b5998",
  "borderColorButtonFacebookBorderedActive": "#354f88",
  "borderColorButtonFacebookBorderedHover": "#385490",
  "borderColorButtonGoogleBordered": "#252A31",
  "borderColorButtonGoogleBorderedActive": "#0B0C0F",
  "borderColorButtonGoogleBorderedHover": "#181B20",
  "borderColorButtonInfoBordered": "#0172CB",
  "borderColorButtonInfoBorderedActive": "#01508E",
  "borderColorButtonInfoBorderedHover": "#0161AC",
  "borderColorButtonPrimaryBordered": "#00a991",
  "borderColorButtonPrimaryBorderedActive": "#008f7b",
  "borderColorButtonPrimaryBorderedHover": "#009882",
  "borderColorButtonSecondaryBordered": "#252A31",
  "borderColorButtonSecondaryBorderedActive": "#0B0C0F",
  "borderColorButtonSecondaryBorderedHover": "#181B20",
  "borderColorButtonSuccessBordered": "#28A138",
  "borderColorButtonSuccessBorderedActive": "#1D7228",
  "borderColorButtonSuccessBorderedHover": "#238B31",
  "borderColorButtonWarningBordered": "#F9971E",
  "borderColorButtonWarningBorderedActive": "#D67906",
  "borderColorButtonWarningBorderedHover": "#F38906",
  "borderColorButtonWhiteBordered": "#fff",
  "borderColorButtonWhiteBorderedActive": "#fff",
  "borderColorButtonWhiteBorderedHover": "#fff",
  "borderColorCard": "#e8edf1",
  "borderColorCheckboxRadio": "#bac7d5",
  "borderColorCheckboxRadioActive": "#252A31",
  "borderColorCheckboxRadioError": "#D21C1C",
  "borderColorCheckboxRadioFocus": "#0172CB",
  "borderColorCheckboxRadioHover": "#5F738C",
  "borderColorInput": "#bac7d5",
  "borderColorInputActive": "#94a8be",
  "borderColorInputError": "#D21C1C",
  "borderColorInputErrorFocus": "#D21C1C",
  "borderColorInputErrorHover": "#B91919",
  "borderColorInputFocus": "#0172CB",
  "borderColorInputHover": "#a6b6c8",
  "borderColorModal": "#e8edf1",
  "borderColorTable": "#e8edf1",
  "borderColorTableCell": "#bac7d5",
  "borderColorTableHead": "#bac7d5",
  "borderColorTag": "#e8edf1",
  "borderColorTagFocus": "#0172CB",
  "borderRadiusBadge": "12px",
  "borderRadiusCircle": "50%",
  "borderRadiusLarge": "6px",
  "borderRadiusNormal": "3px",
  "borderRadiusSmall": "2px",
  "borderStyleCard": "solid",
  "borderStyleInput": "solid",
  "borderWidthCard": "1px",
  "borderWidthInput": "1px",
  "borderWidthInputFocus": "2px",
  "boxShadowActionable": "0 2px 4px 0 rgba(23, 27, 30, 0.1)",
  "boxShadowButtonFocus": "0 0 4px 1px rgba(1, 114, 203, 0.3)",
  "boxShadowElevatedLevel1": "0 4px 12px 0 rgba(23, 27, 30, 0.3)",
  "boxShadowModal": "0 20px 60px 0 rgba(23, 27, 30, 0.4)",
  "colorAlertIconCritical": "#D21C1C",
  "colorAlertIconInfo": "#0172CB",
  "colorAlertIconSuccess": "#28A138",
  "colorAlertIconWarning": "#F9971E",
  "colorFormLabel": "#252A31",
  "colorFormLabelFilled": "#5F738C",
  "colorHeading": "#171b1e",
  "colorHeadingInverted": "#fff",
  "colorIconAttention": "#171b1e",
  "colorIconCheckboxRadio": "#00a991",
  "colorIconCheckboxRadioDisabled": "#bac7d5",
  "colorIconCritical": "#D21C1C",
  "colorIconInfo": "#0172CB",
  "colorIconInput": "#bac7d5",
  "colorIconPrimary": "#252A31",
  "colorIconRadioButton": "#00a991",
  "colorIconRadioButtonDisabled": "#bac7d5",
  "colorIconSecondary": "#5F738C",
  "colorIconSuccess": "#28A138",
  "colorIconTertiary": "#bac7d5",
  "colorIconWarning": "#F9971E",
  "colorInfoCheckBoxRadio": "#5F738C",
  "colorPlaceholderInput": "#bac7d5",
  "colorPlaceholderInputError": "#D21C1C",
  "colorPlaceholderInputFile": "#5F738C",
  "colorPlaceholderInputFileError": "#D21C1C",
  "colorStopoverArrow": "#5F738C",
  "colorTextAlertCritical": "#760909",
  "colorTextAlertInfo": "#004680",
  "colorTextAlertLink": "#171b1e",
  "colorTextAlertSuccess": "#235C2B",
  "colorTextAlertWarning": "#8E2A06",
  "colorTextAttention": "#171b1e",
  "colorTextBadgeCritical": "#D21C1C",
  "colorTextBadgeDark": "#fff",
  "colorTextBadgeInfo": "#0172CB",
  "colorTextBadgeNeutral": "#171b1e",
  "colorTextBadgeSuccess": "#28A138",
  "colorTextBadgeWarning": "#F9971E",
  "colorTextBadgeWhite": "#171b1e",
  "colorTextButtonCritical": "#fff",
  "colorTextButtonCriticalActive": "#fff",
  "colorTextButtonCriticalBordered": "#D21C1C",
  "colorTextButtonCriticalBorderedActive": "#9D1515",
  "colorTextButtonCriticalBorderedHover": "#B91919",
  "colorTextButtonCriticalHover": "#fff",
  "colorTextButtonFacebook": "#fff",
  "colorTextButtonFacebookActive": "#fff",
  "colorTextButtonFacebookBordered": "#3b5998",
  "colorTextButtonFacebookBorderedActive": "#354f88",
  "colorTextButtonFacebookBorderedHover": "#385490",
  "colorTextButtonFacebookHover": "#fff",
  "colorTextButtonFilled": "#fff",
  "colorTextButtonFilledActive": "#fff",
  "colorTextButtonFilledHover": "#fff",
  "colorTextButtonGoogle": "#252A31",
  "colorTextButtonGoogleActive": "#0B0C0F",
  "colorTextButtonGoogleBordered": "#252A31",
  "colorTextButtonGoogleBorderedActive": "#0B0C0F",
  "colorTextButtonGoogleBorderedHover": "#181B20",
  "colorTextButtonGoogleHover": "#181B20",
  "colorTextButtonInfo": "#fff",
  "colorTextButtonInfoActive": "#fff",
  "colorTextButtonInfoBordered": "#0172CB",
  "colorTextButtonInfoBorderedActive": "#01508E",
  "colorTextButtonInfoBorderedHover": "#0161AC",
  "colorTextButtonInfoHover": "#fff",
  "colorTextButtonLinkPrimary": "#00a991",
  "colorTextButtonLinkPrimaryActive": "#008f7b",
  "colorTextButtonLinkPrimaryHover": "#009882",
  "colorTextButtonLinkSecondary": "#252A31",
  "colorTextButtonLinkSecondaryActive": "#0B0C0F",
  "colorTextButtonLinkSecondaryHover": "#181B20",
  "colorTextButtonPrimary": "#fff",
  "colorTextButtonPrimaryActive": "#fff",
  "colorTextButtonPrimaryBordered": "#00a991",
  "colorTextButtonPrimaryBorderedActive": "#008f7b",
  "colorTextButtonPrimaryBorderedHover": "#009882",
  "colorTextButtonPrimaryHover": "#fff",
  "colorTextButtonSecondary": "#252A31",
  "colorTextButtonSecondaryActive": "#0B0C0F",
  "colorTextButtonSecondaryBordered": "#252A31",
  "colorTextButtonSecondaryBorderedActive": "#0B0C0F",
  "colorTextButtonSecondaryBorderedHover": "#181B20",
  "colorTextButtonSecondaryHover": "#181B20",
  "colorTextButtonSuccess": "#fff",
  "colorTextButtonSuccessActive": "#fff",
  "colorTextButtonSuccessBordered": "#28A138",
  "colorTextButtonSuccessBorderedActive": "#1D7228",
  "colorTextButtonSuccessBorderedHover": "#238B31",
  "colorTextButtonSuccessHover": "#fff",
  "colorTextButtonWarning": "#fff",
  "colorTextButtonWarningActive": "#fff",
  "colorTextButtonWarningBordered": "#F9971E",
  "colorTextButtonWarningBorderedActive": "#D67906",
  "colorTextButtonWarningBorderedHover": "#F38906",
  "colorTextButtonWarningHover": "#fff",
  "colorTextButtonWhite": "#252A31",
  "colorTextButtonWhiteActive": "#0B0C0F",
  "colorTextButtonWhiteBordered": "#fff",
  "colorTextButtonWhiteBorderedActive": "#fff",
  "colorTextButtonWhiteBorderedHover": "#fff",
  "colorTextButtonWhiteHover": "#181B20",
  "colorTextCritical": "#D21C1C",
  "colorTextError": "#D21C1C",
  "colorTextInfo": "#0172CB",
  "colorTextInput": "#252A31",
  "colorTextInputDisabled": "#bac7d5",
  "colorTextInputPrefix": "#5F738C",
  "colorTextLinkPrimary": "#007F6D",
  "colorTextLinkPrimaryHover": "#00a991",
  "colorTextLinkSecondary": "#171b1e",
  "colorTextLinkSecondaryHover": "#00a991",
  "colorTextLoading": "#bac7d5",
  "colorTextPrimary": "#252A31",
  "colorTextSecondary": "#5F738C",
  "colorTextSuccess": "#28A138",
  "colorTextTable": "#5F738C",
  "colorTextTag": "#252A31",
  "colorTextTagSelected": "#e8edf1",
  "colorTextWarning": "#F9971E",
  "colorTextWhite": "#fff",
  "durationFast": "0.15s",
  "durationNormal": "0.3s",
  "durationSlow": "0.4s",
  "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
  "fontSizeButtonLarge": "16px",
  "fontSizeButtonNormal": "14px",
  "fontSizeButtonSmall": "12px",
  "fontSizeFormFeedback": "12px",
  "fontSizeFormLabel": "14px",
  "fontSizeHeadingDisplay": "40px",
  "fontSizeHeadingTitle1": "28px",
  "fontSizeHeadingTitle2": "22px",
  "fontSizeHeadingTitle3": "16px",
  "fontSizeHeadingTitle4": "14px",
  "fontSizeHeadingTitle5": "12px",
  "fontSizeInputNormal": "14px",
  "fontSizeInputSmall": "14px",
  "fontSizeMessage": "14px",
  "fontSizeTextLarge": "16px",
  "fontSizeTextNormal": "14px",
  "fontSizeTextSmall": "12px",
  "fontWeightBold": "700",
  "fontWeightHeadingDisplay": "700",
  "fontWeightHeadingTitle1": "700",
  "fontWeightHeadingTitle2": "500",
  "fontWeightHeadingTitle3": "500",
  "fontWeightHeadingTitle4": "500",
  "fontWeightHeadingTitle5": "700",
  "fontWeightLinks": "500",
  "fontWeightMedium": "500",
  "fontWeightNormal": "400",
  "fontWeightTableHead": "700",
  "heightBadge": "24px",
  "heightButtonLarge": "52px",
  "heightButtonNormal": "44px",
  "heightButtonSmall": "32px",
  "heightCheckbox": "20px",
  "heightCountryFlag": "auto",
  "heightIconLarge": "32px",
  "heightIconMedium": "24px",
  "heightIconSmall": "16px",
  "heightIllustrationMedium": "200px",
  "heightIllustrationSmall": "90px",
  "heightInputGroupSeparatorNormal": "24px",
  "heightInputGroupSeparatorSmall": "16px",
  "heightInputLarge": "52px",
  "heightInputNormal": "44px",
  "heightInputSmall": "32px",
  "heightRadioButton": "20px",
  "heightSeparator": "1px",
  "heightServiceLogoLarge": "48px",
  "heightServiceLogoMedium": "24px",
  "heightServiceLogoSmall": "12px",
  "heightStopoverArrow": "7px",
  "lineHeightHeading": "1.2",
  "lineHeightText": "1.4",
  "marginBadgeIcon": "0 4px 0 0",
  "marginBottomSelectSuffix": "2px",
  "marginButtonGroup": "0 8px 0 0",
  "marginButtonGroupConnected": "0 1px 0 0",
  "marginButtonIconLarge": "12px",
  "marginButtonIconNormal": "8px",
  "marginButtonIconSmall": "8px",
  "marginTopFormFeedback": "2px",
  "modifierScaleButtonActive": 0.95,
  "modifierScaleCheckboxRadioActive": 0.95,
  "opacityButtonDisabled": "0.3",
  "opacityCheckboxDisabled": "0.5",
  "opacityOverlay": "0.8",
  "opacityRadioButtonDisabled": "0.5",
  "paddingAlert": "16px",
  "paddingAlertWithIcon": "12px",
  "paddingBadge": "0 8px",
  "paddingButtonLarge": "0 28px",
  "paddingButtonLargeWithIcons": "0 16px",
  "paddingButtonLargeWithLeftIcon": "0 28px 0 16px",
  "paddingButtonLargeWithRightIcon": "0 16px 0 28px",
  "paddingButtonNormal": "0 16px",
  "paddingButtonNormalWithIcons": "0 12px",
  "paddingButtonNormalWithLeftIcon": "0 16px 0 12px",
  "paddingButtonNormalWithRightIcon": "0 12px 0 16px",
  "paddingButtonSmall": "0 12px",
  "paddingButtonSmallWithIcons": "0 8px",
  "paddingButtonSmallWithLeftIcon": "0 12px 0 8px",
  "paddingButtonSmallWithRightIcon": "0 8px 0 12px",
  "paddingButtonWithoutText": "0",
  "paddingInputFile": "0 0 0 6px",
  "paddingInputNormal": "0 12px",
  "paddingInputSmall": "0 12px",
  "paddingLeftSelectPrefix": "48px",
  "paddingLoading": "12px",
  "paddingTable": "12px 16px",
  "paddingTableCompact": "8px 12px",
  "paddingTag": "6px 8px",
  "paddingTagRemovable": "6px 6px 6px 8px",
  "paddingTagRemovableWithIcon": "6px",
  "paddingTagWithIcon": "6px 8px 6px 6px",
  "paddingTextareaNormal": "12px",
  "paddingTextareaSmall": "8px 12px",
  "paletteBlueDark": "#004680",
  "paletteBlueDarkActive": "#002442",
  "paletteBlueDarkHover": "#003561",
  "paletteBlueLight": "#E5F7FF",
  "paletteBlueLightActive": "#A8E5FF",
  "paletteBlueLightHover": "#C7EEFF",
  "paletteBlueNormal": "#0172CB",
  "paletteBlueNormalActive": "#01508E",
  "paletteBlueNormalHover": "#0161AC",
  "paletteCloudLight": "#f5f7f9",
  "paletteCloudLightActive": "#d6dee6",
  "paletteCloudLightHover": "#e5eaef",
  "paletteCloudNormal": "#e8edf1",
  "paletteCloudNormalActive": "#cad5df",
  "paletteCloudNormalHover": "#d9e1e8",
  "paletteGreenDark": "#235C2B",
  "paletteGreenDarkActive": "#123016",
  "paletteGreenDarkHover": "#1B4621",
  "paletteGreenLight": "#EBF4EC",
  "paletteGreenLightActive": "#C3DFC7",
  "paletteGreenLightHover": "#D7EAD9",
  "paletteGreenNormal": "#28A138",
  "paletteGreenNormalActive": "#1D7228",
  "paletteGreenNormalHover": "#238B31",
  "paletteInkDark": "#171b1e",
  "paletteInkLight": "#5F738C",
  "paletteInkLightActive": "#465567",
  "paletteInkLightHover": "#52647A",
  "paletteInkLighter": "#bac7d5",
  "paletteInkLighterActive": "#94a8be",
  "paletteInkLighterHover": "#a6b6c8",
  "paletteInkNormal": "#252A31",
  "paletteInkNormalActive": "#0B0C0F",
  "paletteInkNormalHover": "#181B20",
  "paletteOrangeDark": "#8E2A06",
  "paletteOrangeDarkActive": "#531904",
  "paletteOrangeDarkHover": "#712105",
  "paletteOrangeLight": "#FDF0E3",
  "paletteOrangeLightActive": "#F8D3AB",
  "paletteOrangeLightHover": "#FAE2C7",
  "paletteOrangeNormal": "#F9971E",
  "paletteOrangeNormalActive": "#D67906",
  "paletteOrangeNormalHover": "#F38906",
  "paletteProductDark": "#007F6D",
  "paletteProductDarkActive": "#006657",
  "paletteProductDarkHover": "#007060",
  "paletteProductLight": "#ECF8F7",
  "paletteProductLightActive": "#C0E8E4",
  "paletteProductLightHover": "#D6F0EE",
  "paletteProductNormal": "#00a991",
  "paletteProductNormalActive": "#008f7b",
  "paletteProductNormalHover": "#009882",
  "paletteRedDark": "#760909",
  "paletteRedDarkActive": "#3E0505",
  "paletteRedDarkHover": "#5A0707",
  "paletteRedLight": "#FAEAEA",
  "paletteRedLightActive": "#EEB9B9",
  "paletteRedLightHover": "#F4D2D2",
  "paletteRedNormal": "#D21C1C",
  "paletteRedNormalActive": "#9D1515",
  "paletteRedNormalHover": "#B91919",
  "paletteSocialFacebook": "#3b5998",
  "paletteSocialFacebookActive": "#354f88",
  "paletteSocialFacebookHover": "#385490",
  "paletteWhite": "#fff",
  "paletteWhiteActive": "#e5eaef",
  "paletteWhiteHover": "#f5f7f9",
  "spaceLarge": "24px",
  "spaceMedium": "16px",
  "spaceSmall": "12px",
  "spaceXLarge": "32px",
  "spaceXSmall": "8px",
  "spaceXXLarge": "40px",
  "spaceXXSmall": "4px",
  "spaceXXXLarge": "52px",
  "spaceXXXSmall": "2px",
  "textDecorationTextLinkPrimary": "underline",
  "textDecorationTextLinkPrimaryHover": "none",
  "textDecorationTextLinkSecondary": "underline",
  "textDecorationTextLinkSecondaryHover": "none",
  "widthBadgeCircled": "24px",
  "widthBreakpointDesktop": 992,
  "widthBreakpointLargeDesktop": 1200,
  "widthBreakpointLargeMobile": 576,
  "widthBreakpointMediumMobile": 414,
  "widthBreakpointTablet": 768,
  "widthCheckbox": "20px",
  "widthCountryFlag": "24px",
  "widthIconLarge": "32px",
  "widthIconMedium": "24px",
  "widthIconSmall": "16px",
  "widthModalLarge": "1280px",
  "widthModalNormal": "740px",
  "widthModalSmall": "540px",
  "widthRadioButton": "20px",
  "widthStopoverArrow": "36px",
  "zIndexDefault": "1",
  "zIndexModal": "825",
  "zIndexModalOverlay": "800",
  "zIndexOnTheTop": "900",
  "zIndexSticky": "100",
}
`;

exports[`fromPlainObject should create full theme should match snapshot 1`] = `
Object {
  "backgroundAlertCritical": "#FAEAEA",
  "backgroundAlertInfo": "#E5F7FF",
  "backgroundAlertSuccess": "#EBF4EC",
  "backgroundAlertWarning": "#FDF0E3",
  "backgroundBadgeCritical": "#FAEAEA",
  "backgroundBadgeDark": "#252A31",
  "backgroundBadgeInfo": "#E5F7FF",
  "backgroundBadgeNeutral": "#f5f7f9",
  "backgroundBadgeSuccess": "#EBF4EC",
  "backgroundBadgeWarning": "#FDF0E3",
  "backgroundBadgeWhite": "#fff",
  "backgroundBody": "#f5f7f9",
  "backgroundButtonBordered": "transparent",
  "backgroundButtonBorderedActive": "#f5f7f9",
  "backgroundButtonBorderedHover": "#f5f7f9",
  "backgroundButtonCritical": "#D21C1C",
  "backgroundButtonCriticalActive": "#9D1515",
  "backgroundButtonCriticalHover": "#B91919",
  "backgroundButtonFacebook": "#3b5998",
  "backgroundButtonFacebookActive": "#354f88",
  "backgroundButtonFacebookHover": "#385490",
  "backgroundButtonGoogle": "#f5f7f9",
  "backgroundButtonGoogleActive": "#d6dee6",
  "backgroundButtonGoogleHover": "#e5eaef",
  "backgroundButtonInfo": "#0172CB",
  "backgroundButtonInfoActive": "#01508E",
  "backgroundButtonInfoHover": "#0161AC",
  "backgroundButtonLinkPrimary": "transparent",
  "backgroundButtonLinkPrimaryActive": "#d6dee6",
  "backgroundButtonLinkPrimaryHover": "#e5eaef",
  "backgroundButtonLinkSecondary": "transparent",
  "backgroundButtonLinkSecondaryActive": "#d6dee6",
  "backgroundButtonLinkSecondaryHover": "#e5eaef",
  "backgroundButtonPrimary": "#ff0000",
  "backgroundButtonPrimaryActive": "#cc0000",
  "backgroundButtonPrimaryHover": "#e50000",
  "backgroundButtonSecondary": "#e8edf1",
  "backgroundButtonSecondaryActive": "#cad5df",
  "backgroundButtonSecondaryHover": "#d9e1e8",
  "backgroundButtonSuccess": "#28A138",
  "backgroundButtonSuccessActive": "#1D7228",
  "backgroundButtonSuccessHover": "#238B31",
  "backgroundButtonWarning": "#F9971E",
  "backgroundButtonWarningActive": "#D67906",
  "backgroundButtonWarningHover": "#F38906",
  "backgroundButtonWhite": "#fff",
  "backgroundButtonWhiteActive": "#e5eaef",
  "backgroundButtonWhiteBordered": "transparent",
  "backgroundButtonWhiteBorderedActive": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteBorderedHover": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteHover": "#f5f7f9",
  "backgroundCard": "#fff",
  "backgroundCarrierLogo": "transparent",
  "backgroundCountryFlag": "transparent",
  "backgroundIllustration": "transparent",
  "backgroundInput": "#fff",
  "backgroundInputDisabled": "#e8edf1",
  "backgroundModal": "#fff",
  "backgroundSeparator": "#e8edf1",
  "backgroundServiceLogo": "transparent",
  "backgroundTable": "#fff",
  "backgroundTableEven": "#f5f7f9",
  "backgroundTableHover": "#e8edf1",
  "backgroundTableShadowLeft": "linear-gradient(to left, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTableShadowRight": "linear-gradient(to right, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTag": "#f5f7f9",
  "backgroundTagActive": "#d6dee6",
  "backgroundTagHover": "#e5eaef",
  "backgroundTagSelected": "#252A31",
  "backgroundTagSelectedActive": "#0B0C0F",
  "backgroundTagSelectedHover": "#181B20",
  "borderColorButtonCriticalBordered": "#D21C1C",
  "borderColorButtonCriticalBorderedActive": "#9D1515",
  "borderColorButtonCriticalBorderedHover": "#B91919",
  "borderColorButtonFacebookBordered": "#3b5998",
  "borderColorButtonFacebookBorderedActive": "#354f88",
  "borderColorButtonFacebookBorderedHover": "#385490",
  "borderColorButtonGoogleBordered": "#252A31",
  "borderColorButtonGoogleBorderedActive": "#0B0C0F",
  "borderColorButtonGoogleBorderedHover": "#181B20",
  "borderColorButtonInfoBordered": "#0172CB",
  "borderColorButtonInfoBorderedActive": "#01508E",
  "borderColorButtonInfoBorderedHover": "#0161AC",
  "borderColorButtonPrimaryBordered": "#ff0000",
  "borderColorButtonPrimaryBorderedActive": "#cc0000",
  "borderColorButtonPrimaryBorderedHover": "#e50000",
  "borderColorButtonSecondaryBordered": "#252A31",
  "borderColorButtonSecondaryBorderedActive": "#0B0C0F",
  "borderColorButtonSecondaryBorderedHover": "#181B20",
  "borderColorButtonSuccessBordered": "#28A138",
  "borderColorButtonSuccessBorderedActive": "#1D7228",
  "borderColorButtonSuccessBorderedHover": "#238B31",
  "borderColorButtonWarningBordered": "#F9971E",
  "borderColorButtonWarningBorderedActive": "#D67906",
  "borderColorButtonWarningBorderedHover": "#F38906",
  "borderColorButtonWhiteBordered": "#fff",
  "borderColorButtonWhiteBorderedActive": "#fff",
  "borderColorButtonWhiteBorderedHover": "#fff",
  "borderColorCard": "#e8edf1",
  "borderColorCheckboxRadio": "#bac7d5",
  "borderColorCheckboxRadioActive": "#252A31",
  "borderColorCheckboxRadioError": "#D21C1C",
  "borderColorCheckboxRadioFocus": "#0172CB",
  "borderColorCheckboxRadioHover": "#5F738C",
  "borderColorInput": "#bac7d5",
  "borderColorInputActive": "#94a8be",
  "borderColorInputError": "#D21C1C",
  "borderColorInputErrorFocus": "#D21C1C",
  "borderColorInputErrorHover": "#B91919",
  "borderColorInputFocus": "#0172CB",
  "borderColorInputHover": "#a6b6c8",
  "borderColorModal": "#e8edf1",
  "borderColorTable": "#e8edf1",
  "borderColorTableCell": "#bac7d5",
  "borderColorTableHead": "#bac7d5",
  "borderColorTag": "#e8edf1",
  "borderColorTagFocus": "#0172CB",
  "borderRadiusBadge": "12px",
  "borderRadiusCircle": "50%",
  "borderRadiusLarge": "6px",
  "borderRadiusNormal": "3px",
  "borderRadiusSmall": "2px",
  "borderStyleCard": "solid",
  "borderStyleInput": "solid",
  "borderWidthCard": "1px",
  "borderWidthInput": "1px",
  "borderWidthInputFocus": "2px",
  "boxShadowActionable": "0 2px 4px 0 rgba(23, 27, 30, 0.1)",
  "boxShadowButtonFocus": "0 0 4px 1px rgba(1, 114, 203, 0.3)",
  "boxShadowElevatedLevel1": "0 4px 12px 0 rgba(23, 27, 30, 0.3)",
  "boxShadowModal": "0 20px 60px 0 rgba(23, 27, 30, 0.4)",
  "colorAlertIconCritical": "#D21C1C",
  "colorAlertIconInfo": "#0172CB",
  "colorAlertIconSuccess": "#28A138",
  "colorAlertIconWarning": "#F9971E",
  "colorFormLabel": "#252A31",
  "colorFormLabelFilled": "#5F738C",
  "colorHeading": "#171b1e",
  "colorHeadingInverted": "#fff",
  "colorIconAttention": "#171b1e",
  "colorIconCheckboxRadio": "#ff0000",
  "colorIconCheckboxRadioDisabled": "#bac7d5",
  "colorIconCritical": "#D21C1C",
  "colorIconInfo": "#0172CB",
  "colorIconInput": "#bac7d5",
  "colorIconPrimary": "#252A31",
  "colorIconRadioButton": "#ff0000",
  "colorIconRadioButtonDisabled": "#bac7d5",
  "colorIconSecondary": "#5F738C",
  "colorIconSuccess": "#28A138",
  "colorIconTertiary": "#bac7d5",
  "colorIconWarning": "#F9971E",
  "colorInfoCheckBoxRadio": "#5F738C",
  "colorPlaceholderInput": "#bac7d5",
  "colorPlaceholderInputError": "#D21C1C",
  "colorPlaceholderInputFile": "#5F738C",
  "colorPlaceholderInputFileError": "#D21C1C",
  "colorStopoverArrow": "#5F738C",
  "colorTextAlertCritical": "#760909",
  "colorTextAlertInfo": "#004680",
  "colorTextAlertLink": "#171b1e",
  "colorTextAlertSuccess": "#235C2B",
  "colorTextAlertWarning": "#8E2A06",
  "colorTextAttention": "#171b1e",
  "colorTextBadgeCritical": "#D21C1C",
  "colorTextBadgeDark": "#fff",
  "colorTextBadgeInfo": "#0172CB",
  "colorTextBadgeNeutral": "#171b1e",
  "colorTextBadgeSuccess": "#28A138",
  "colorTextBadgeWarning": "#F9971E",
  "colorTextBadgeWhite": "#171b1e",
  "colorTextButtonCritical": "#fff",
  "colorTextButtonCriticalActive": "#fff",
  "colorTextButtonCriticalBordered": "#D21C1C",
  "colorTextButtonCriticalBorderedActive": "#9D1515",
  "colorTextButtonCriticalBorderedHover": "#B91919",
  "colorTextButtonCriticalHover": "#fff",
  "colorTextButtonFacebook": "#fff",
  "colorTextButtonFacebookActive": "#fff",
  "colorTextButtonFacebookBordered": "#3b5998",
  "colorTextButtonFacebookBorderedActive": "#354f88",
  "colorTextButtonFacebookBorderedHover": "#385490",
  "colorTextButtonFacebookHover": "#fff",
  "colorTextButtonFilled": "#fff",
  "colorTextButtonFilledActive": "#fff",
  "colorTextButtonFilledHover": "#fff",
  "colorTextButtonGoogle": "#252A31",
  "colorTextButtonGoogleActive": "#0B0C0F",
  "colorTextButtonGoogleBordered": "#252A31",
  "colorTextButtonGoogleBorderedActive": "#0B0C0F",
  "colorTextButtonGoogleBorderedHover": "#181B20",
  "colorTextButtonGoogleHover": "#181B20",
  "colorTextButtonInfo": "#fff",
  "colorTextButtonInfoActive": "#fff",
  "colorTextButtonInfoBordered": "#0172CB",
  "colorTextButtonInfoBorderedActive": "#01508E",
  "colorTextButtonInfoBorderedHover": "#0161AC",
  "colorTextButtonInfoHover": "#fff",
  "colorTextButtonLinkPrimary": "#ff0000",
  "colorTextButtonLinkPrimaryActive": "#cc0000",
  "colorTextButtonLinkPrimaryHover": "#e50000",
  "colorTextButtonLinkSecondary": "#252A31",
  "colorTextButtonLinkSecondaryActive": "#0B0C0F",
  "colorTextButtonLinkSecondaryHover": "#181B20",
  "colorTextButtonPrimary": "#fff",
  "colorTextButtonPrimaryActive": "#fff",
  "colorTextButtonPrimaryBordered": "#ff0000",
  "colorTextButtonPrimaryBorderedActive": "#cc0000",
  "colorTextButtonPrimaryBorderedHover": "#e50000",
  "colorTextButtonPrimaryHover": "#fff",
  "colorTextButtonSecondary": "#252A31",
  "colorTextButtonSecondaryActive": "#0B0C0F",
  "colorTextButtonSecondaryBordered": "#252A31",
  "colorTextButtonSecondaryBorderedActive": "#0B0C0F",
  "colorTextButtonSecondaryBorderedHover": "#181B20",
  "colorTextButtonSecondaryHover": "#181B20",
  "colorTextButtonSuccess": "#fff",
  "colorTextButtonSuccessActive": "#fff",
  "colorTextButtonSuccessBordered": "#28A138",
  "colorTextButtonSuccessBorderedActive": "#1D7228",
  "colorTextButtonSuccessBorderedHover": "#238B31",
  "colorTextButtonSuccessHover": "#fff",
  "colorTextButtonWarning": "#fff",
  "colorTextButtonWarningActive": "#fff",
  "colorTextButtonWarningBordered": "#F9971E",
  "colorTextButtonWarningBorderedActive": "#D67906",
  "colorTextButtonWarningBorderedHover": "#F38906",
  "colorTextButtonWarningHover": "#fff",
  "colorTextButtonWhite": "#252A31",
  "colorTextButtonWhiteActive": "#0B0C0F",
  "colorTextButtonWhiteBordered": "#fff",
  "colorTextButtonWhiteBorderedActive": "#fff",
  "colorTextButtonWhiteBorderedHover": "#fff",
  "colorTextButtonWhiteHover": "#181B20",
  "colorTextCritical": "#D21C1C",
  "colorTextError": "#D21C1C",
  "colorTextInfo": "#0172CB",
  "colorTextInput": "#252A31",
  "colorTextInputDisabled": "#bac7d5",
  "colorTextInputPrefix": "#5F738C",
  "colorTextLinkPrimary": "#990000",
  "colorTextLinkPrimaryHover": "#ff0000",
  "colorTextLinkSecondary": "#171b1e",
  "colorTextLinkSecondaryHover": "#ff0000",
  "colorTextLoading": "#bac7d5",
  "colorTextPrimary": "#252A31",
  "colorTextSecondary": "#5F738C",
  "colorTextSuccess": "#28A138",
  "colorTextTable": "#5F738C",
  "colorTextTag": "#252A31",
  "colorTextTagSelected": "#e8edf1",
  "colorTextWarning": "#F9971E",
  "colorTextWhite": "#fff",
  "durationFast": "0.15s",
  "durationNormal": "0.3s",
  "durationSlow": "0.4s",
  "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
  "fontSizeButtonLarge": "16px",
  "fontSizeButtonNormal": "14px",
  "fontSizeButtonSmall": "12px",
  "fontSizeFormFeedback": "12px",
  "fontSizeFormLabel": "14px",
  "fontSizeHeadingDisplay": "40px",
  "fontSizeHeadingTitle1": "28px",
  "fontSizeHeadingTitle2": "22px",
  "fontSizeHeadingTitle3": "16px",
  "fontSizeHeadingTitle4": "14px",
  "fontSizeHeadingTitle5": "12px",
  "fontSizeInputNormal": "14px",
  "fontSizeInputSmall": "14px",
  "fontSizeMessage": "14px",
  "fontSizeTextLarge": "16px",
  "fontSizeTextNormal": "14px",
  "fontSizeTextSmall": "12px",
  "fontWeightBold": "700",
  "fontWeightHeadingDisplay": "700",
  "fontWeightHeadingTitle1": "700",
  "fontWeightHeadingTitle2": "500",
  "fontWeightHeadingTitle3": "500",
  "fontWeightHeadingTitle4": "500",
  "fontWeightHeadingTitle5": "700",
  "fontWeightLinks": "500",
  "fontWeightMedium": "500",
  "fontWeightNormal": "400",
  "fontWeightTableHead": "700",
  "heightBadge": "24px",
  "heightButtonLarge": "52px",
  "heightButtonNormal": "44px",
  "heightButtonSmall": "32px",
  "heightCheckbox": "20px",
  "heightCountryFlag": "auto",
  "heightIconLarge": "32px",
  "heightIconMedium": "24px",
  "heightIconSmall": "16px",
  "heightIllustrationMedium": "200px",
  "heightIllustrationSmall": "90px",
  "heightInputGroupSeparatorNormal": "24px",
  "heightInputGroupSeparatorSmall": "16px",
  "heightInputLarge": "52px",
  "heightInputNormal": "44px",
  "heightInputSmall": "32px",
  "heightRadioButton": "20px",
  "heightSeparator": "1px",
  "heightServiceLogoLarge": "48px",
  "heightServiceLogoMedium": "24px",
  "heightServiceLogoSmall": "12px",
  "heightStopoverArrow": "7px",
  "lineHeightHeading": "1.2",
  "lineHeightText": "1.4",
  "marginBadgeIcon": "0 4px 0 0",
  "marginBottomSelectSuffix": "2px",
  "marginButtonGroup": "0 8px 0 0",
  "marginButtonGroupConnected": "0 1px 0 0",
  "marginButtonIconLarge": "12px",
  "marginButtonIconNormal": "8px",
  "marginButtonIconSmall": "8px",
  "marginTopFormFeedback": "2px",
  "modifierScaleButtonActive": 0.95,
  "modifierScaleCheckboxRadioActive": 0.95,
  "opacityButtonDisabled": "0.3",
  "opacityCheckboxDisabled": "0.5",
  "opacityOverlay": "0.8",
  "opacityRadioButtonDisabled": "0.5",
  "paddingAlert": "16px",
  "paddingAlertWithIcon": "12px",
  "paddingBadge": "0 8px",
  "paddingButtonLarge": "0 28px",
  "paddingButtonLargeWithIcons": "0 16px",
  "paddingButtonLargeWithLeftIcon": "0 28px 0 16px",
  "paddingButtonLargeWithRightIcon": "0 16px 0 28px",
  "paddingButtonNormal": "0 16px",
  "paddingButtonNormalWithIcons": "0 12px",
  "paddingButtonNormalWithLeftIcon": "0 16px 0 12px",
  "paddingButtonNormalWithRightIcon": "0 12px 0 16px",
  "paddingButtonSmall": "0 12px",
  "paddingButtonSmallWithIcons": "0 8px",
  "paddingButtonSmallWithLeftIcon": "0 12px 0 8px",
  "paddingButtonSmallWithRightIcon": "0 8px 0 12px",
  "paddingButtonWithoutText": "0",
  "paddingInputFile": "0 0 0 6px",
  "paddingInputNormal": "0 12px",
  "paddingInputSmall": "0 12px",
  "paddingLeftSelectPrefix": "48px",
  "paddingLoading": "12px",
  "paddingTable": "12px 16px",
  "paddingTableCompact": "8px 12px",
  "paddingTag": "6px 8px",
  "paddingTagRemovable": "6px 6px 6px 8px",
  "paddingTagRemovableWithIcon": "6px",
  "paddingTagWithIcon": "6px 8px 6px 6px",
  "paddingTextareaNormal": "12px",
  "paddingTextareaSmall": "8px 12px",
  "paletteBlueDark": "#004680",
  "paletteBlueDarkActive": "#002442",
  "paletteBlueDarkHover": "#003561",
  "paletteBlueLight": "#E5F7FF",
  "paletteBlueLightActive": "#A8E5FF",
  "paletteBlueLightHover": "#C7EEFF",
  "paletteBlueNormal": "#0172CB",
  "paletteBlueNormalActive": "#01508E",
  "paletteBlueNormalHover": "#0161AC",
  "paletteCloudLight": "#f5f7f9",
  "paletteCloudLightActive": "#d6dee6",
  "paletteCloudLightHover": "#e5eaef",
  "paletteCloudNormal": "#e8edf1",
  "paletteCloudNormalActive": "#cad5df",
  "paletteCloudNormalHover": "#d9e1e8",
  "paletteGreenDark": "#235C2B",
  "paletteGreenDarkActive": "#123016",
  "paletteGreenDarkHover": "#1B4621",
  "paletteGreenLight": "#EBF4EC",
  "paletteGreenLightActive": "#C3DFC7",
  "paletteGreenLightHover": "#D7EAD9",
  "paletteGreenNormal": "#28A138",
  "paletteGreenNormalActive": "#1D7228",
  "paletteGreenNormalHover": "#238B31",
  "paletteInkDark": "#171b1e",
  "paletteInkLight": "#5F738C",
  "paletteInkLightActive": "#465567",
  "paletteInkLightHover": "#52647A",
  "paletteInkLighter": "#bac7d5",
  "paletteInkLighterActive": "#94a8be",
  "paletteInkLighterHover": "#a6b6c8",
  "paletteInkNormal": "#252A31",
  "paletteInkNormalActive": "#0B0C0F",
  "paletteInkNormalHover": "#181B20",
  "paletteOrangeDark": "#8E2A06",
  "paletteOrangeDarkActive": "#531904",
  "paletteOrangeDarkHover": "#712105",
  "paletteOrangeLight": "#FDF0E3",
  "paletteOrangeLightActive": "#F8D3AB",
  "paletteOrangeLightHover": "#FAE2C7",
  "paletteOrangeNormal": "#F9971E",
  "paletteOrangeNormalActive": "#D67906",
  "paletteOrangeNormalHover": "#F38906",
  "paletteProductDark": "#990000",
  "paletteProductDarkActive": "#006657",
  "paletteProductDarkHover": "#007060",
  "paletteProductLight": "#ff9999",
  "paletteProductLightActive": "#ff6666",
  "paletteProductLightHover": "#ff7f7f",
  "paletteProductNormal": "#ff0000",
  "paletteProductNormalActive": "#cc0000",
  "paletteProductNormalHover": "#e50000",
  "paletteRedDark": "#760909",
  "paletteRedDarkActive": "#3E0505",
  "paletteRedDarkHover": "#5A0707",
  "paletteRedLight": "#FAEAEA",
  "paletteRedLightActive": "#EEB9B9",
  "paletteRedLightHover": "#F4D2D2",
  "paletteRedNormal": "#D21C1C",
  "paletteRedNormalActive": "#9D1515",
  "paletteRedNormalHover": "#B91919",
  "paletteSocialFacebook": "#3b5998",
  "paletteSocialFacebookActive": "#354f88",
  "paletteSocialFacebookHover": "#385490",
  "paletteWhite": "#fff",
  "paletteWhiteActive": "#e5eaef",
  "paletteWhiteHover": "#f5f7f9",
  "spaceLarge": "24px",
  "spaceMedium": "16px",
  "spaceSmall": "12px",
  "spaceXLarge": "32px",
  "spaceXSmall": "8px",
  "spaceXXLarge": "40px",
  "spaceXXSmall": "4px",
  "spaceXXXLarge": "52px",
  "spaceXXXSmall": "2px",
  "textDecorationTextLinkPrimary": "underline",
  "textDecorationTextLinkPrimaryHover": "none",
  "textDecorationTextLinkSecondary": "underline",
  "textDecorationTextLinkSecondaryHover": "none",
  "widthBadgeCircled": "24px",
  "widthBreakpointDesktop": 992,
  "widthBreakpointLargeDesktop": 1200,
  "widthBreakpointLargeMobile": 576,
  "widthBreakpointMediumMobile": 414,
  "widthBreakpointTablet": 768,
  "widthCheckbox": "20px",
  "widthCountryFlag": "24px",
  "widthIconLarge": "32px",
  "widthIconMedium": "24px",
  "widthIconSmall": "16px",
  "widthModalLarge": "1280px",
  "widthModalNormal": "740px",
  "widthModalSmall": "540px",
  "widthRadioButton": "20px",
  "widthStopoverArrow": "36px",
  "zIndexDefault": "1",
  "zIndexModal": "825",
  "zIndexModalOverlay": "800",
  "zIndexOnTheTop": "900",
  "zIndexSticky": "100",
}
`;

exports[`getTokens should accept some base should match snapshot 1`] = `
Object {
  "backgroundAlertCritical": "#FAEAEA",
  "backgroundAlertInfo": "#E5F7FF",
  "backgroundAlertSuccess": "#EBF4EC",
  "backgroundAlertWarning": "#FDF0E3",
  "backgroundBadgeCritical": "#FAEAEA",
  "backgroundBadgeDark": "#252A31",
  "backgroundBadgeInfo": "#E5F7FF",
  "backgroundBadgeNeutral": "#f5f7f9",
  "backgroundBadgeSuccess": "#EBF4EC",
  "backgroundBadgeWarning": "#FDF0E3",
  "backgroundBadgeWhite": "#fff",
  "backgroundBody": "#f5f7f9",
  "backgroundButtonBordered": "transparent",
  "backgroundButtonBorderedActive": "#f5f7f9",
  "backgroundButtonBorderedHover": "#f5f7f9",
  "backgroundButtonCritical": "#D21C1C",
  "backgroundButtonCriticalActive": "#9D1515",
  "backgroundButtonCriticalHover": "#B91919",
  "backgroundButtonFacebook": "#3b5998",
  "backgroundButtonFacebookActive": "#354f88",
  "backgroundButtonFacebookHover": "#385490",
  "backgroundButtonGoogle": "#f5f7f9",
  "backgroundButtonGoogleActive": "#d6dee6",
  "backgroundButtonGoogleHover": "#e5eaef",
  "backgroundButtonInfo": "#0172CB",
  "backgroundButtonInfoActive": "#01508E",
  "backgroundButtonInfoHover": "#0161AC",
  "backgroundButtonLinkPrimary": "transparent",
  "backgroundButtonLinkPrimaryActive": "#d6dee6",
  "backgroundButtonLinkPrimaryHover": "#e5eaef",
  "backgroundButtonLinkSecondary": "transparent",
  "backgroundButtonLinkSecondaryActive": "#d6dee6",
  "backgroundButtonLinkSecondaryHover": "#e5eaef",
  "backgroundButtonPrimary": "#00a991",
  "backgroundButtonPrimaryActive": "#008f7b",
  "backgroundButtonPrimaryHover": "#009882",
  "backgroundButtonSecondary": "#e8edf1",
  "backgroundButtonSecondaryActive": "#cad5df",
  "backgroundButtonSecondaryHover": "#d9e1e8",
  "backgroundButtonSuccess": "#28A138",
  "backgroundButtonSuccessActive": "#1D7228",
  "backgroundButtonSuccessHover": "#238B31",
  "backgroundButtonWarning": "#F9971E",
  "backgroundButtonWarningActive": "#D67906",
  "backgroundButtonWarningHover": "#F38906",
  "backgroundButtonWhite": "#fff",
  "backgroundButtonWhiteActive": "#e5eaef",
  "backgroundButtonWhiteBordered": "transparent",
  "backgroundButtonWhiteBorderedActive": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteBorderedHover": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteHover": "#f5f7f9",
  "backgroundCard": "#fff",
  "backgroundCarrierLogo": "transparent",
  "backgroundCountryFlag": "transparent",
  "backgroundIllustration": "transparent",
  "backgroundInput": "#fff",
  "backgroundInputDisabled": "#e8edf1",
  "backgroundModal": "#fff",
  "backgroundSeparator": "#e8edf1",
  "backgroundServiceLogo": "transparent",
  "backgroundTable": "#fff",
  "backgroundTableEven": "#f5f7f9",
  "backgroundTableHover": "#e8edf1",
  "backgroundTableShadowLeft": "linear-gradient(to left, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTableShadowRight": "linear-gradient(to right, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTag": "#f5f7f9",
  "backgroundTagActive": "#d6dee6",
  "backgroundTagHover": "#e5eaef",
  "backgroundTagSelected": "#252A31",
  "backgroundTagSelectedActive": "#0B0C0F",
  "backgroundTagSelectedHover": "#181B20",
  "borderColorButtonCriticalBordered": "#D21C1C",
  "borderColorButtonCriticalBorderedActive": "#9D1515",
  "borderColorButtonCriticalBorderedHover": "#B91919",
  "borderColorButtonFacebookBordered": "#3b5998",
  "borderColorButtonFacebookBorderedActive": "#354f88",
  "borderColorButtonFacebookBorderedHover": "#385490",
  "borderColorButtonGoogleBordered": "#252A31",
  "borderColorButtonGoogleBorderedActive": "#0B0C0F",
  "borderColorButtonGoogleBorderedHover": "#181B20",
  "borderColorButtonInfoBordered": "#0172CB",
  "borderColorButtonInfoBorderedActive": "#01508E",
  "borderColorButtonInfoBorderedHover": "#0161AC",
  "borderColorButtonPrimaryBordered": "#00a991",
  "borderColorButtonPrimaryBorderedActive": "#008f7b",
  "borderColorButtonPrimaryBorderedHover": "#009882",
  "borderColorButtonSecondaryBordered": "#252A31",
  "borderColorButtonSecondaryBorderedActive": "#0B0C0F",
  "borderColorButtonSecondaryBorderedHover": "#181B20",
  "borderColorButtonSuccessBordered": "#28A138",
  "borderColorButtonSuccessBorderedActive": "#1D7228",
  "borderColorButtonSuccessBorderedHover": "#238B31",
  "borderColorButtonWarningBordered": "#F9971E",
  "borderColorButtonWarningBorderedActive": "#D67906",
  "borderColorButtonWarningBorderedHover": "#F38906",
  "borderColorButtonWhiteBordered": "#fff",
  "borderColorButtonWhiteBorderedActive": "#fff",
  "borderColorButtonWhiteBorderedHover": "#fff",
  "borderColorCard": "#e8edf1",
  "borderColorCheckboxRadio": "#bac7d5",
  "borderColorCheckboxRadioActive": "#252A31",
  "borderColorCheckboxRadioError": "#D21C1C",
  "borderColorCheckboxRadioFocus": "#0172CB",
  "borderColorCheckboxRadioHover": "#5F738C",
  "borderColorInput": "#bac7d5",
  "borderColorInputActive": "#94a8be",
  "borderColorInputError": "#D21C1C",
  "borderColorInputErrorFocus": "#D21C1C",
  "borderColorInputErrorHover": "#B91919",
  "borderColorInputFocus": "#0172CB",
  "borderColorInputHover": "#a6b6c8",
  "borderColorModal": "#e8edf1",
  "borderColorTable": "#e8edf1",
  "borderColorTableCell": "#bac7d5",
  "borderColorTableHead": "#bac7d5",
  "borderColorTag": "#e8edf1",
  "borderColorTagFocus": "#0172CB",
  "borderRadiusBadge": "12px",
  "borderRadiusCircle": "50%",
  "borderRadiusLarge": "6px",
  "borderRadiusNormal": "3px",
  "borderRadiusSmall": "2px",
  "borderStyleCard": "solid",
  "borderStyleInput": "solid",
  "borderWidthCard": "1px",
  "borderWidthInput": "1px",
  "borderWidthInputFocus": "2px",
  "boxShadowActionable": "0 2px 4px 0 rgba(23, 27, 30, 0.1)",
  "boxShadowButtonFocus": "0 0 4px 1px rgba(1, 114, 203, 0.3)",
  "boxShadowElevatedLevel1": "0 4px 12px 0 rgba(23, 27, 30, 0.3)",
  "boxShadowModal": "0 20px 60px 0 rgba(23, 27, 30, 0.4)",
  "colorAlertIconCritical": "#D21C1C",
  "colorAlertIconInfo": "#0172CB",
  "colorAlertIconSuccess": "#28A138",
  "colorAlertIconWarning": "#F9971E",
  "colorFormLabel": "#252A31",
  "colorFormLabelFilled": "#5F738C",
  "colorHeading": "#171b1e",
  "colorHeadingInverted": "#fff",
  "colorIconAttention": "#171b1e",
  "colorIconCheckboxRadio": "#00a991",
  "colorIconCheckboxRadioDisabled": "#bac7d5",
  "colorIconCritical": "#D21C1C",
  "colorIconInfo": "#0172CB",
  "colorIconInput": "#bac7d5",
  "colorIconPrimary": "#252A31",
  "colorIconRadioButton": "#00a991",
  "colorIconRadioButtonDisabled": "#bac7d5",
  "colorIconSecondary": "#5F738C",
  "colorIconSuccess": "#28A138",
  "colorIconTertiary": "#bac7d5",
  "colorIconWarning": "#F9971E",
  "colorInfoCheckBoxRadio": "#5F738C",
  "colorPlaceholderInput": "#bac7d5",
  "colorPlaceholderInputError": "#D21C1C",
  "colorPlaceholderInputFile": "#5F738C",
  "colorPlaceholderInputFileError": "#D21C1C",
  "colorStopoverArrow": "#5F738C",
  "colorTextAlertCritical": "#760909",
  "colorTextAlertInfo": "#004680",
  "colorTextAlertLink": "#171b1e",
  "colorTextAlertSuccess": "#235C2B",
  "colorTextAlertWarning": "#8E2A06",
  "colorTextAttention": "#171b1e",
  "colorTextBadgeCritical": "#D21C1C",
  "colorTextBadgeDark": "#fff",
  "colorTextBadgeInfo": "#0172CB",
  "colorTextBadgeNeutral": "#171b1e",
  "colorTextBadgeSuccess": "#28A138",
  "colorTextBadgeWarning": "#F9971E",
  "colorTextBadgeWhite": "#171b1e",
  "colorTextButtonCritical": "#fff",
  "colorTextButtonCriticalActive": "#fff",
  "colorTextButtonCriticalBordered": "#D21C1C",
  "colorTextButtonCriticalBorderedActive": "#9D1515",
  "colorTextButtonCriticalBorderedHover": "#B91919",
  "colorTextButtonCriticalHover": "#fff",
  "colorTextButtonFacebook": "#fff",
  "colorTextButtonFacebookActive": "#fff",
  "colorTextButtonFacebookBordered": "#3b5998",
  "colorTextButtonFacebookBorderedActive": "#354f88",
  "colorTextButtonFacebookBorderedHover": "#385490",
  "colorTextButtonFacebookHover": "#fff",
  "colorTextButtonFilled": "#fff",
  "colorTextButtonFilledActive": "#fff",
  "colorTextButtonFilledHover": "#fff",
  "colorTextButtonGoogle": "#252A31",
  "colorTextButtonGoogleActive": "#0B0C0F",
  "colorTextButtonGoogleBordered": "#252A31",
  "colorTextButtonGoogleBorderedActive": "#0B0C0F",
  "colorTextButtonGoogleBorderedHover": "#181B20",
  "colorTextButtonGoogleHover": "#181B20",
  "colorTextButtonInfo": "#fff",
  "colorTextButtonInfoActive": "#fff",
  "colorTextButtonInfoBordered": "#0172CB",
  "colorTextButtonInfoBorderedActive": "#01508E",
  "colorTextButtonInfoBorderedHover": "#0161AC",
  "colorTextButtonInfoHover": "#fff",
  "colorTextButtonLinkPrimary": "#00a991",
  "colorTextButtonLinkPrimaryActive": "#008f7b",
  "colorTextButtonLinkPrimaryHover": "#009882",
  "colorTextButtonLinkSecondary": "#252A31",
  "colorTextButtonLinkSecondaryActive": "#0B0C0F",
  "colorTextButtonLinkSecondaryHover": "#181B20",
  "colorTextButtonPrimary": "#fff",
  "colorTextButtonPrimaryActive": "#fff",
  "colorTextButtonPrimaryBordered": "#00a991",
  "colorTextButtonPrimaryBorderedActive": "#008f7b",
  "colorTextButtonPrimaryBorderedHover": "#009882",
  "colorTextButtonPrimaryHover": "#fff",
  "colorTextButtonSecondary": "#252A31",
  "colorTextButtonSecondaryActive": "#0B0C0F",
  "colorTextButtonSecondaryBordered": "#252A31",
  "colorTextButtonSecondaryBorderedActive": "#0B0C0F",
  "colorTextButtonSecondaryBorderedHover": "#181B20",
  "colorTextButtonSecondaryHover": "#181B20",
  "colorTextButtonSuccess": "#fff",
  "colorTextButtonSuccessActive": "#fff",
  "colorTextButtonSuccessBordered": "#28A138",
  "colorTextButtonSuccessBorderedActive": "#1D7228",
  "colorTextButtonSuccessBorderedHover": "#238B31",
  "colorTextButtonSuccessHover": "#fff",
  "colorTextButtonWarning": "#fff",
  "colorTextButtonWarningActive": "#fff",
  "colorTextButtonWarningBordered": "#F9971E",
  "colorTextButtonWarningBorderedActive": "#D67906",
  "colorTextButtonWarningBorderedHover": "#F38906",
  "colorTextButtonWarningHover": "#fff",
  "colorTextButtonWhite": "#252A31",
  "colorTextButtonWhiteActive": "#0B0C0F",
  "colorTextButtonWhiteBordered": "#fff",
  "colorTextButtonWhiteBorderedActive": "#fff",
  "colorTextButtonWhiteBorderedHover": "#fff",
  "colorTextButtonWhiteHover": "#181B20",
  "colorTextCritical": "#D21C1C",
  "colorTextError": "#D21C1C",
  "colorTextInfo": "#0172CB",
  "colorTextInput": "#252A31",
  "colorTextInputDisabled": "#bac7d5",
  "colorTextInputPrefix": "#5F738C",
  "colorTextLinkPrimary": "#007F6D",
  "colorTextLinkPrimaryHover": "#00a991",
  "colorTextLinkSecondary": "#171b1e",
  "colorTextLinkSecondaryHover": "#00a991",
  "colorTextLoading": "#bac7d5",
  "colorTextPrimary": "#252A31",
  "colorTextSecondary": "#5F738C",
  "colorTextSuccess": "#28A138",
  "colorTextTable": "#5F738C",
  "colorTextTag": "#252A31",
  "colorTextTagSelected": "#e8edf1",
  "colorTextWarning": "#F9971E",
  "colorTextWhite": "#fff",
  "durationFast": "0.15s",
  "durationNormal": "0.3s",
  "durationSlow": "0.4s",
  "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
  "fontSizeButtonLarge": "16px",
  "fontSizeButtonNormal": "14px",
  "fontSizeButtonSmall": "12px",
  "fontSizeFormFeedback": "12px",
  "fontSizeFormLabel": "14px",
  "fontSizeHeadingDisplay": "40px",
  "fontSizeHeadingTitle1": "28px",
  "fontSizeHeadingTitle2": "22px",
  "fontSizeHeadingTitle3": "16px",
  "fontSizeHeadingTitle4": "14px",
  "fontSizeHeadingTitle5": "12px",
  "fontSizeInputNormal": "14px",
  "fontSizeInputSmall": "14px",
  "fontSizeMessage": "14px",
  "fontSizeTextLarge": "16px",
  "fontSizeTextNormal": "14px",
  "fontSizeTextSmall": "12px",
  "fontWeightBold": "700",
  "fontWeightHeadingDisplay": "700",
  "fontWeightHeadingTitle1": "700",
  "fontWeightHeadingTitle2": "500",
  "fontWeightHeadingTitle3": "500",
  "fontWeightHeadingTitle4": "500",
  "fontWeightHeadingTitle5": "700",
  "fontWeightLinks": "500",
  "fontWeightMedium": "500",
  "fontWeightNormal": "400",
  "fontWeightTableHead": "700",
  "heightBadge": "2px",
  "heightButtonLarge": "5px",
  "heightButtonNormal": "4px",
  "heightButtonSmall": "3px",
  "heightCheckbox": "20px",
  "heightCountryFlag": "auto",
  "heightIconLarge": "3px",
  "heightIconMedium": "2px",
  "heightIconSmall": "1px",
  "heightIllustrationMedium": "200px",
  "heightIllustrationSmall": "90px",
  "heightInputGroupSeparatorNormal": "2px",
  "heightInputGroupSeparatorSmall": "1px",
  "heightInputLarge": "5px",
  "heightInputNormal": "4px",
  "heightInputSmall": "3px",
  "heightRadioButton": "20px",
  "heightSeparator": "1px",
  "heightServiceLogoLarge": "48px",
  "heightServiceLogoMedium": "2px",
  "heightServiceLogoSmall": "12px",
  "heightStopoverArrow": "7px",
  "lineHeightHeading": "1.2",
  "lineHeightText": "1.4",
  "marginBadgeIcon": "0 4px 0 0",
  "marginBottomSelectSuffix": "2px",
  "marginButtonGroup": "0 8px 0 0",
  "marginButtonGroupConnected": "0 1px 0 0",
  "marginButtonIconLarge": "12px",
  "marginButtonIconNormal": "8px",
  "marginButtonIconSmall": "8px",
  "marginTopFormFeedback": "2px",
  "modifierScaleButtonActive": 0.95,
  "modifierScaleCheckboxRadioActive": 0.95,
  "opacityButtonDisabled": "0.3",
  "opacityCheckboxDisabled": "0.5",
  "opacityOverlay": "0.8",
  "opacityRadioButtonDisabled": "0.5",
  "paddingAlert": "16px",
  "paddingAlertWithIcon": "12px",
  "paddingBadge": "0 8px",
  "paddingButtonLarge": "0 28px",
  "paddingButtonLargeWithIcons": "0 16px",
  "paddingButtonLargeWithLeftIcon": "0 28px 0 16px",
  "paddingButtonLargeWithRightIcon": "0 16px 0 28px",
  "paddingButtonNormal": "0 16px",
  "paddingButtonNormalWithIcons": "0 12px",
  "paddingButtonNormalWithLeftIcon": "0 16px 0 12px",
  "paddingButtonNormalWithRightIcon": "0 12px 0 16px",
  "paddingButtonSmall": "0 12px",
  "paddingButtonSmallWithIcons": "0 8px",
  "paddingButtonSmallWithLeftIcon": "0 12px 0 8px",
  "paddingButtonSmallWithRightIcon": "0 8px 0 12px",
  "paddingButtonWithoutText": "0",
  "paddingInputFile": "0 0 0 6px",
  "paddingInputNormal": "0 12px",
  "paddingInputSmall": "0 12px",
  "paddingLeftSelectPrefix": "48px",
  "paddingLoading": "12px",
  "paddingTable": "12px 16px",
  "paddingTableCompact": "8px 12px",
  "paddingTag": "6px 8px",
  "paddingTagRemovable": "6px 6px 6px 8px",
  "paddingTagRemovableWithIcon": "6px",
  "paddingTagWithIcon": "6px 8px 6px 6px",
  "paddingTextareaNormal": "12px",
  "paddingTextareaSmall": "8px 12px",
  "paletteBlueDark": "#004680",
  "paletteBlueDarkActive": "#002442",
  "paletteBlueDarkHover": "#003561",
  "paletteBlueLight": "#E5F7FF",
  "paletteBlueLightActive": "#A8E5FF",
  "paletteBlueLightHover": "#C7EEFF",
  "paletteBlueNormal": "#0172CB",
  "paletteBlueNormalActive": "#01508E",
  "paletteBlueNormalHover": "#0161AC",
  "paletteCloudLight": "#f5f7f9",
  "paletteCloudLightActive": "#d6dee6",
  "paletteCloudLightHover": "#e5eaef",
  "paletteCloudNormal": "#e8edf1",
  "paletteCloudNormalActive": "#cad5df",
  "paletteCloudNormalHover": "#d9e1e8",
  "paletteGreenDark": "#235C2B",
  "paletteGreenDarkActive": "#123016",
  "paletteGreenDarkHover": "#1B4621",
  "paletteGreenLight": "#EBF4EC",
  "paletteGreenLightActive": "#C3DFC7",
  "paletteGreenLightHover": "#D7EAD9",
  "paletteGreenNormal": "#28A138",
  "paletteGreenNormalActive": "#1D7228",
  "paletteGreenNormalHover": "#238B31",
  "paletteInkDark": "#171b1e",
  "paletteInkLight": "#5F738C",
  "paletteInkLightActive": "#465567",
  "paletteInkLightHover": "#52647A",
  "paletteInkLighter": "#bac7d5",
  "paletteInkLighterActive": "#94a8be",
  "paletteInkLighterHover": "#a6b6c8",
  "paletteInkNormal": "#252A31",
  "paletteInkNormalActive": "#0B0C0F",
  "paletteInkNormalHover": "#181B20",
  "paletteOrangeDark": "#8E2A06",
  "paletteOrangeDarkActive": "#531904",
  "paletteOrangeDarkHover": "#712105",
  "paletteOrangeLight": "#FDF0E3",
  "paletteOrangeLightActive": "#F8D3AB",
  "paletteOrangeLightHover": "#FAE2C7",
  "paletteOrangeNormal": "#F9971E",
  "paletteOrangeNormalActive": "#D67906",
  "paletteOrangeNormalHover": "#F38906",
  "paletteProductDark": "#007F6D",
  "paletteProductDarkActive": "#006657",
  "paletteProductDarkHover": "#007060",
  "paletteProductLight": "#ECF8F7",
  "paletteProductLightActive": "#C0E8E4",
  "paletteProductLightHover": "#D6F0EE",
  "paletteProductNormal": "#00a991",
  "paletteProductNormalActive": "#008f7b",
  "paletteProductNormalHover": "#009882",
  "paletteRedDark": "#760909",
  "paletteRedDarkActive": "#3E0505",
  "paletteRedDarkHover": "#5A0707",
  "paletteRedLight": "#FAEAEA",
  "paletteRedLightActive": "#EEB9B9",
  "paletteRedLightHover": "#F4D2D2",
  "paletteRedNormal": "#D21C1C",
  "paletteRedNormalActive": "#9D1515",
  "paletteRedNormalHover": "#B91919",
  "paletteSocialFacebook": "#3b5998",
  "paletteSocialFacebookActive": "#354f88",
  "paletteSocialFacebookHover": "#385490",
  "paletteWhite": "#fff",
  "paletteWhiteActive": "#e5eaef",
  "paletteWhiteHover": "#f5f7f9",
  "spaceLarge": "24px",
  "spaceMedium": "16px",
  "spaceSmall": "12px",
  "spaceXLarge": "32px",
  "spaceXSmall": "8px",
  "spaceXXLarge": "40px",
  "spaceXXSmall": "4px",
  "spaceXXXLarge": "52px",
  "spaceXXXSmall": "2px",
  "textDecorationTextLinkPrimary": "underline",
  "textDecorationTextLinkPrimaryHover": "none",
  "textDecorationTextLinkSecondary": "underline",
  "textDecorationTextLinkSecondaryHover": "none",
  "widthBadgeCircled": "2px",
  "widthBreakpointDesktop": 992,
  "widthBreakpointLargeDesktop": 1200,
  "widthBreakpointLargeMobile": 576,
  "widthBreakpointMediumMobile": 414,
  "widthBreakpointTablet": 768,
  "widthCheckbox": "20px",
  "widthCountryFlag": "2px",
  "widthIconLarge": "3px",
  "widthIconMedium": "2px",
  "widthIconSmall": "1px",
  "widthModalLarge": "1280px",
  "widthModalNormal": "740px",
  "widthModalSmall": "540px",
  "widthRadioButton": "20px",
  "widthStopoverArrow": "36px",
  "zIndexDefault": "1",
  "zIndexModal": "825",
  "zIndexModalOverlay": "800",
  "zIndexOnTheTop": "900",
  "zIndexSticky": "100",
}
`;

exports[`getTokens should accept some palette and base foundation should match snapshot 1`] = `
Object {
  "backgroundAlertCritical": "#FAEAEA",
  "backgroundAlertInfo": "#E5F7FF",
  "backgroundAlertSuccess": "#EBF4EC",
  "backgroundAlertWarning": "#FDF0E3",
  "backgroundBadgeCritical": "#FAEAEA",
  "backgroundBadgeDark": "#252A31",
  "backgroundBadgeInfo": "#E5F7FF",
  "backgroundBadgeNeutral": "#f5f7f9",
  "backgroundBadgeSuccess": "#EBF4EC",
  "backgroundBadgeWarning": "#FDF0E3",
  "backgroundBadgeWhite": "#fff",
  "backgroundBody": "#f5f7f9",
  "backgroundButtonBordered": "transparent",
  "backgroundButtonBorderedActive": "#f5f7f9",
  "backgroundButtonBorderedHover": "#f5f7f9",
  "backgroundButtonCritical": "#D21C1C",
  "backgroundButtonCriticalActive": "#9D1515",
  "backgroundButtonCriticalHover": "#B91919",
  "backgroundButtonFacebook": "#3b5998",
  "backgroundButtonFacebookActive": "#354f88",
  "backgroundButtonFacebookHover": "#385490",
  "backgroundButtonGoogle": "#f5f7f9",
  "backgroundButtonGoogleActive": "#d6dee6",
  "backgroundButtonGoogleHover": "#e5eaef",
  "backgroundButtonInfo": "#0172CB",
  "backgroundButtonInfoActive": "#01508E",
  "backgroundButtonInfoHover": "#0161AC",
  "backgroundButtonLinkPrimary": "transparent",
  "backgroundButtonLinkPrimaryActive": "#d6dee6",
  "backgroundButtonLinkPrimaryHover": "#e5eaef",
  "backgroundButtonLinkSecondary": "transparent",
  "backgroundButtonLinkSecondaryActive": "#d6dee6",
  "backgroundButtonLinkSecondaryHover": "#e5eaef",
  "backgroundButtonPrimary": "#444",
  "backgroundButtonPrimaryActive": "#666",
  "backgroundButtonPrimaryHover": "#555",
  "backgroundButtonSecondary": "#e8edf1",
  "backgroundButtonSecondaryActive": "#cad5df",
  "backgroundButtonSecondaryHover": "#d9e1e8",
  "backgroundButtonSuccess": "#28A138",
  "backgroundButtonSuccessActive": "#1D7228",
  "backgroundButtonSuccessHover": "#238B31",
  "backgroundButtonWarning": "#F9971E",
  "backgroundButtonWarningActive": "#D67906",
  "backgroundButtonWarningHover": "#F38906",
  "backgroundButtonWhite": "#fff",
  "backgroundButtonWhiteActive": "#e5eaef",
  "backgroundButtonWhiteBordered": "transparent",
  "backgroundButtonWhiteBorderedActive": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteBorderedHover": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteHover": "#f5f7f9",
  "backgroundCard": "#fff",
  "backgroundCarrierLogo": "transparent",
  "backgroundCountryFlag": "transparent",
  "backgroundIllustration": "transparent",
  "backgroundInput": "#fff",
  "backgroundInputDisabled": "#e8edf1",
  "backgroundModal": "#fff",
  "backgroundSeparator": "#e8edf1",
  "backgroundServiceLogo": "transparent",
  "backgroundTable": "#fff",
  "backgroundTableEven": "#f5f7f9",
  "backgroundTableHover": "#e8edf1",
  "backgroundTableShadowLeft": "linear-gradient(to left, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTableShadowRight": "linear-gradient(to right, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTag": "#f5f7f9",
  "backgroundTagActive": "#d6dee6",
  "backgroundTagHover": "#e5eaef",
  "backgroundTagSelected": "#252A31",
  "backgroundTagSelectedActive": "#0B0C0F",
  "backgroundTagSelectedHover": "#181B20",
  "borderColorButtonCriticalBordered": "#D21C1C",
  "borderColorButtonCriticalBorderedActive": "#9D1515",
  "borderColorButtonCriticalBorderedHover": "#B91919",
  "borderColorButtonFacebookBordered": "#3b5998",
  "borderColorButtonFacebookBorderedActive": "#354f88",
  "borderColorButtonFacebookBorderedHover": "#385490",
  "borderColorButtonGoogleBordered": "#252A31",
  "borderColorButtonGoogleBorderedActive": "#0B0C0F",
  "borderColorButtonGoogleBorderedHover": "#181B20",
  "borderColorButtonInfoBordered": "#0172CB",
  "borderColorButtonInfoBorderedActive": "#01508E",
  "borderColorButtonInfoBorderedHover": "#0161AC",
  "borderColorButtonPrimaryBordered": "#444",
  "borderColorButtonPrimaryBorderedActive": "#666",
  "borderColorButtonPrimaryBorderedHover": "#555",
  "borderColorButtonSecondaryBordered": "#252A31",
  "borderColorButtonSecondaryBorderedActive": "#0B0C0F",
  "borderColorButtonSecondaryBorderedHover": "#181B20",
  "borderColorButtonSuccessBordered": "#28A138",
  "borderColorButtonSuccessBorderedActive": "#1D7228",
  "borderColorButtonSuccessBorderedHover": "#238B31",
  "borderColorButtonWarningBordered": "#F9971E",
  "borderColorButtonWarningBorderedActive": "#D67906",
  "borderColorButtonWarningBorderedHover": "#F38906",
  "borderColorButtonWhiteBordered": "#fff",
  "borderColorButtonWhiteBorderedActive": "#fff",
  "borderColorButtonWhiteBorderedHover": "#fff",
  "borderColorCard": "#e8edf1",
  "borderColorCheckboxRadio": "#bac7d5",
  "borderColorCheckboxRadioActive": "#252A31",
  "borderColorCheckboxRadioError": "#D21C1C",
  "borderColorCheckboxRadioFocus": "#0172CB",
  "borderColorCheckboxRadioHover": "#5F738C",
  "borderColorInput": "#bac7d5",
  "borderColorInputActive": "#94a8be",
  "borderColorInputError": "#D21C1C",
  "borderColorInputErrorFocus": "#D21C1C",
  "borderColorInputErrorHover": "#B91919",
  "borderColorInputFocus": "#0172CB",
  "borderColorInputHover": "#a6b6c8",
  "borderColorModal": "#e8edf1",
  "borderColorTable": "#e8edf1",
  "borderColorTableCell": "#bac7d5",
  "borderColorTableHead": "#bac7d5",
  "borderColorTag": "#e8edf1",
  "borderColorTagFocus": "#0172CB",
  "borderRadiusBadge": "12px",
  "borderRadiusCircle": "50%",
  "borderRadiusLarge": "6px",
  "borderRadiusNormal": "3px",
  "borderRadiusSmall": "2px",
  "borderStyleCard": "solid",
  "borderStyleInput": "solid",
  "borderWidthCard": "1px",
  "borderWidthInput": "1px",
  "borderWidthInputFocus": "2px",
  "boxShadowActionable": "0 2px 4px 0 rgba(23, 27, 30, 0.1)",
  "boxShadowButtonFocus": "0 0 4px 1px rgba(1, 114, 203, 0.3)",
  "boxShadowElevatedLevel1": "0 4px 12px 0 rgba(23, 27, 30, 0.3)",
  "boxShadowModal": "0 20px 60px 0 rgba(23, 27, 30, 0.4)",
  "colorAlertIconCritical": "#D21C1C",
  "colorAlertIconInfo": "#0172CB",
  "colorAlertIconSuccess": "#28A138",
  "colorAlertIconWarning": "#F9971E",
  "colorFormLabel": "#252A31",
  "colorFormLabelFilled": "#5F738C",
  "colorHeading": "#171b1e",
  "colorHeadingInverted": "#fff",
  "colorIconAttention": "#171b1e",
  "colorIconCheckboxRadio": "#444",
  "colorIconCheckboxRadioDisabled": "#bac7d5",
  "colorIconCritical": "#D21C1C",
  "colorIconInfo": "#0172CB",
  "colorIconInput": "#bac7d5",
  "colorIconPrimary": "#252A31",
  "colorIconRadioButton": "#444",
  "colorIconRadioButtonDisabled": "#bac7d5",
  "colorIconSecondary": "#5F738C",
  "colorIconSuccess": "#28A138",
  "colorIconTertiary": "#bac7d5",
  "colorIconWarning": "#F9971E",
  "colorInfoCheckBoxRadio": "#5F738C",
  "colorPlaceholderInput": "#bac7d5",
  "colorPlaceholderInputError": "#D21C1C",
  "colorPlaceholderInputFile": "#5F738C",
  "colorPlaceholderInputFileError": "#D21C1C",
  "colorStopoverArrow": "#5F738C",
  "colorTextAlertCritical": "#760909",
  "colorTextAlertInfo": "#004680",
  "colorTextAlertLink": "#171b1e",
  "colorTextAlertSuccess": "#235C2B",
  "colorTextAlertWarning": "#8E2A06",
  "colorTextAttention": "#171b1e",
  "colorTextBadgeCritical": "#D21C1C",
  "colorTextBadgeDark": "#fff",
  "colorTextBadgeInfo": "#0172CB",
  "colorTextBadgeNeutral": "#171b1e",
  "colorTextBadgeSuccess": "#28A138",
  "colorTextBadgeWarning": "#F9971E",
  "colorTextBadgeWhite": "#171b1e",
  "colorTextButtonCritical": "#fff",
  "colorTextButtonCriticalActive": "#fff",
  "colorTextButtonCriticalBordered": "#D21C1C",
  "colorTextButtonCriticalBorderedActive": "#9D1515",
  "colorTextButtonCriticalBorderedHover": "#B91919",
  "colorTextButtonCriticalHover": "#fff",
  "colorTextButtonFacebook": "#fff",
  "colorTextButtonFacebookActive": "#fff",
  "colorTextButtonFacebookBordered": "#3b5998",
  "colorTextButtonFacebookBorderedActive": "#354f88",
  "colorTextButtonFacebookBorderedHover": "#385490",
  "colorTextButtonFacebookHover": "#fff",
  "colorTextButtonFilled": "#fff",
  "colorTextButtonFilledActive": "#fff",
  "colorTextButtonFilledHover": "#fff",
  "colorTextButtonGoogle": "#252A31",
  "colorTextButtonGoogleActive": "#0B0C0F",
  "colorTextButtonGoogleBordered": "#252A31",
  "colorTextButtonGoogleBorderedActive": "#0B0C0F",
  "colorTextButtonGoogleBorderedHover": "#181B20",
  "colorTextButtonGoogleHover": "#181B20",
  "colorTextButtonInfo": "#fff",
  "colorTextButtonInfoActive": "#fff",
  "colorTextButtonInfoBordered": "#0172CB",
  "colorTextButtonInfoBorderedActive": "#01508E",
  "colorTextButtonInfoBorderedHover": "#0161AC",
  "colorTextButtonInfoHover": "#fff",
  "colorTextButtonLinkPrimary": "#444",
  "colorTextButtonLinkPrimaryActive": "#666",
  "colorTextButtonLinkPrimaryHover": "#555",
  "colorTextButtonLinkSecondary": "#252A31",
  "colorTextButtonLinkSecondaryActive": "#0B0C0F",
  "colorTextButtonLinkSecondaryHover": "#181B20",
  "colorTextButtonPrimary": "#fff",
  "colorTextButtonPrimaryActive": "#fff",
  "colorTextButtonPrimaryBordered": "#444",
  "colorTextButtonPrimaryBorderedActive": "#666",
  "colorTextButtonPrimaryBorderedHover": "#555",
  "colorTextButtonPrimaryHover": "#fff",
  "colorTextButtonSecondary": "#252A31",
  "colorTextButtonSecondaryActive": "#0B0C0F",
  "colorTextButtonSecondaryBordered": "#252A31",
  "colorTextButtonSecondaryBorderedActive": "#0B0C0F",
  "colorTextButtonSecondaryBorderedHover": "#181B20",
  "colorTextButtonSecondaryHover": "#181B20",
  "colorTextButtonSuccess": "#fff",
  "colorTextButtonSuccessActive": "#fff",
  "colorTextButtonSuccessBordered": "#28A138",
  "colorTextButtonSuccessBorderedActive": "#1D7228",
  "colorTextButtonSuccessBorderedHover": "#238B31",
  "colorTextButtonSuccessHover": "#fff",
  "colorTextButtonWarning": "#fff",
  "colorTextButtonWarningActive": "#fff",
  "colorTextButtonWarningBordered": "#F9971E",
  "colorTextButtonWarningBorderedActive": "#D67906",
  "colorTextButtonWarningBorderedHover": "#F38906",
  "colorTextButtonWarningHover": "#fff",
  "colorTextButtonWhite": "#252A31",
  "colorTextButtonWhiteActive": "#0B0C0F",
  "colorTextButtonWhiteBordered": "#fff",
  "colorTextButtonWhiteBorderedActive": "#fff",
  "colorTextButtonWhiteBorderedHover": "#fff",
  "colorTextButtonWhiteHover": "#181B20",
  "colorTextCritical": "#D21C1C",
  "colorTextError": "#D21C1C",
  "colorTextInfo": "#0172CB",
  "colorTextInput": "#252A31",
  "colorTextInputDisabled": "#bac7d5",
  "colorTextInputPrefix": "#5F738C",
  "colorTextLinkPrimary": "#777",
  "colorTextLinkPrimaryHover": "#444",
  "colorTextLinkSecondary": "#171b1e",
  "colorTextLinkSecondaryHover": "#444",
  "colorTextLoading": "#bac7d5",
  "colorTextPrimary": "#252A31",
  "colorTextSecondary": "#5F738C",
  "colorTextSuccess": "#28A138",
  "colorTextTable": "#5F738C",
  "colorTextTag": "#252A31",
  "colorTextTagSelected": "#e8edf1",
  "colorTextWarning": "#F9971E",
  "colorTextWhite": "#fff",
  "durationFast": "0.15s",
  "durationNormal": "0.3s",
  "durationSlow": "0.4s",
  "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
  "fontSizeButtonLarge": "16px",
  "fontSizeButtonNormal": "14px",
  "fontSizeButtonSmall": "16px",
  "fontSizeFormFeedback": "16px",
  "fontSizeFormLabel": "14px",
  "fontSizeHeadingDisplay": "40px",
  "fontSizeHeadingTitle1": "28px",
  "fontSizeHeadingTitle2": "22px",
  "fontSizeHeadingTitle3": "16px",
  "fontSizeHeadingTitle4": "14px",
  "fontSizeHeadingTitle5": "16px",
  "fontSizeInputNormal": "14px",
  "fontSizeInputSmall": "14px",
  "fontSizeMessage": "14px",
  "fontSizeTextLarge": "16px",
  "fontSizeTextNormal": "14px",
  "fontSizeTextSmall": "16px",
  "fontWeightBold": "700",
  "fontWeightHeadingDisplay": "700",
  "fontWeightHeadingTitle1": "700",
  "fontWeightHeadingTitle2": "500",
  "fontWeightHeadingTitle3": "500",
  "fontWeightHeadingTitle4": "500",
  "fontWeightHeadingTitle5": "700",
  "fontWeightLinks": "500",
  "fontWeightMedium": "500",
  "fontWeightNormal": "400",
  "fontWeightTableHead": "700",
  "heightBadge": "24px",
  "heightButtonLarge": "52px",
  "heightButtonNormal": "44px",
  "heightButtonSmall": "32px",
  "heightCheckbox": "20px",
  "heightCountryFlag": "auto",
  "heightIconLarge": "32px",
  "heightIconMedium": "24px",
  "heightIconSmall": "16px",
  "heightIllustrationMedium": "200px",
  "heightIllustrationSmall": "90px",
  "heightInputGroupSeparatorNormal": "24px",
  "heightInputGroupSeparatorSmall": "16px",
  "heightInputLarge": "52px",
  "heightInputNormal": "44px",
  "heightInputSmall": "32px",
  "heightRadioButton": "20px",
  "heightSeparator": "1px",
  "heightServiceLogoLarge": "48px",
  "heightServiceLogoMedium": "24px",
  "heightServiceLogoSmall": "12px",
  "heightStopoverArrow": "7px",
  "lineHeightHeading": "1.2",
  "lineHeightText": "1.4",
  "marginBadgeIcon": "0 4px 0 0",
  "marginBottomSelectSuffix": "2px",
  "marginButtonGroup": "0 8px 0 0",
  "marginButtonGroupConnected": "0 1px 0 0",
  "marginButtonIconLarge": "12px",
  "marginButtonIconNormal": "8px",
  "marginButtonIconSmall": "8px",
  "marginTopFormFeedback": "2px",
  "modifierScaleButtonActive": 0.95,
  "modifierScaleCheckboxRadioActive": 0.95,
  "opacityButtonDisabled": "0.3",
  "opacityCheckboxDisabled": "0.5",
  "opacityOverlay": "0.8",
  "opacityRadioButtonDisabled": "0.5",
  "paddingAlert": "16px",
  "paddingAlertWithIcon": "12px",
  "paddingBadge": "0 8px",
  "paddingButtonLarge": "0 28px",
  "paddingButtonLargeWithIcons": "0 16px",
  "paddingButtonLargeWithLeftIcon": "0 28px 0 16px",
  "paddingButtonLargeWithRightIcon": "0 16px 0 28px",
  "paddingButtonNormal": "0 16px",
  "paddingButtonNormalWithIcons": "0 12px",
  "paddingButtonNormalWithLeftIcon": "0 16px 0 12px",
  "paddingButtonNormalWithRightIcon": "0 12px 0 16px",
  "paddingButtonSmall": "0 12px",
  "paddingButtonSmallWithIcons": "0 8px",
  "paddingButtonSmallWithLeftIcon": "0 12px 0 8px",
  "paddingButtonSmallWithRightIcon": "0 8px 0 12px",
  "paddingButtonWithoutText": "0",
  "paddingInputFile": "0 0 0 6px",
  "paddingInputNormal": "0 12px",
  "paddingInputSmall": "0 12px",
  "paddingLeftSelectPrefix": "48px",
  "paddingLoading": "12px",
  "paddingTable": "12px 16px",
  "paddingTableCompact": "8px 12px",
  "paddingTag": "6px 8px",
  "paddingTagRemovable": "6px 6px 6px 8px",
  "paddingTagRemovableWithIcon": "6px",
  "paddingTagWithIcon": "6px 8px 6px 6px",
  "paddingTextareaNormal": "12px",
  "paddingTextareaSmall": "8px 12px",
  "paletteBlueDark": "#004680",
  "paletteBlueDarkActive": "#002442",
  "paletteBlueDarkHover": "#003561",
  "paletteBlueLight": "#E5F7FF",
  "paletteBlueLightActive": "#A8E5FF",
  "paletteBlueLightHover": "#C7EEFF",
  "paletteBlueNormal": "#0172CB",
  "paletteBlueNormalActive": "#01508E",
  "paletteBlueNormalHover": "#0161AC",
  "paletteCloudLight": "#f5f7f9",
  "paletteCloudLightActive": "#d6dee6",
  "paletteCloudLightHover": "#e5eaef",
  "paletteCloudNormal": "#e8edf1",
  "paletteCloudNormalActive": "#cad5df",
  "paletteCloudNormalHover": "#d9e1e8",
  "paletteGreenDark": "#235C2B",
  "paletteGreenDarkActive": "#123016",
  "paletteGreenDarkHover": "#1B4621",
  "paletteGreenLight": "#EBF4EC",
  "paletteGreenLightActive": "#C3DFC7",
  "paletteGreenLightHover": "#D7EAD9",
  "paletteGreenNormal": "#28A138",
  "paletteGreenNormalActive": "#1D7228",
  "paletteGreenNormalHover": "#238B31",
  "paletteInkDark": "#171b1e",
  "paletteInkLight": "#5F738C",
  "paletteInkLightActive": "#465567",
  "paletteInkLightHover": "#52647A",
  "paletteInkLighter": "#bac7d5",
  "paletteInkLighterActive": "#94a8be",
  "paletteInkLighterHover": "#a6b6c8",
  "paletteInkNormal": "#252A31",
  "paletteInkNormalActive": "#0B0C0F",
  "paletteInkNormalHover": "#181B20",
  "paletteOrangeDark": "#8E2A06",
  "paletteOrangeDarkActive": "#531904",
  "paletteOrangeDarkHover": "#712105",
  "paletteOrangeLight": "#FDF0E3",
  "paletteOrangeLightActive": "#F8D3AB",
  "paletteOrangeLightHover": "#FAE2C7",
  "paletteOrangeNormal": "#F9971E",
  "paletteOrangeNormalActive": "#D67906",
  "paletteOrangeNormalHover": "#F38906",
  "paletteProductDark": "#777",
  "paletteProductDarkActive": "#999",
  "paletteProductDarkHover": "#888",
  "paletteProductLight": "#ECF8F7",
  "paletteProductLightActive": "#333",
  "paletteProductLightHover": "#222",
  "paletteProductNormal": "#444",
  "paletteProductNormalActive": "#666",
  "paletteProductNormalHover": "#555",
  "paletteRedDark": "#760909",
  "paletteRedDarkActive": "#3E0505",
  "paletteRedDarkHover": "#5A0707",
  "paletteRedLight": "#FAEAEA",
  "paletteRedLightActive": "#EEB9B9",
  "paletteRedLightHover": "#F4D2D2",
  "paletteRedNormal": "#D21C1C",
  "paletteRedNormalActive": "#9D1515",
  "paletteRedNormalHover": "#B91919",
  "paletteSocialFacebook": "#3b5998",
  "paletteSocialFacebookActive": "#354f88",
  "paletteSocialFacebookHover": "#385490",
  "paletteWhite": "#fff",
  "paletteWhiteActive": "#e5eaef",
  "paletteWhiteHover": "#f5f7f9",
  "spaceLarge": "24px",
  "spaceMedium": "16px",
  "spaceSmall": "12px",
  "spaceXLarge": "32px",
  "spaceXSmall": "8px",
  "spaceXXLarge": "40px",
  "spaceXXSmall": "4px",
  "spaceXXXLarge": "52px",
  "spaceXXXSmall": "2px",
  "textDecorationTextLinkPrimary": "underline",
  "textDecorationTextLinkPrimaryHover": "none",
  "textDecorationTextLinkSecondary": "underline",
  "textDecorationTextLinkSecondaryHover": "none",
  "widthBadgeCircled": "24px",
  "widthBreakpointDesktop": 992,
  "widthBreakpointLargeDesktop": 1200,
  "widthBreakpointLargeMobile": 576,
  "widthBreakpointMediumMobile": 414,
  "widthBreakpointTablet": 768,
  "widthCheckbox": "20px",
  "widthCountryFlag": "24px",
  "widthIconLarge": "32px",
  "widthIconMedium": "24px",
  "widthIconSmall": "16px",
  "widthModalLarge": "1280px",
  "widthModalNormal": "740px",
  "widthModalSmall": "540px",
  "widthRadioButton": "20px",
  "widthStopoverArrow": "36px",
  "zIndexDefault": "1",
  "zIndexModal": "825",
  "zIndexModalOverlay": "800",
  "zIndexOnTheTop": "900",
  "zIndexSticky": "100",
}
`;
